assets/css/style.css
/* I ended up resetting the default values to 0 - made it easier to 
format the rest and see exactly what padding / margins / etc were 
doing */
* {
    margin: 0; 
    padding: 0; 
    border: 0; 
    outline: 0;
}

/* Entire Page */
html {
    height: 100%;
}

body {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    color: #777777;
    height: 100%;
}

h1 {
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 28px;
}

/* Header */
#header {
    width: 960px;
    margin: auto;
    overflow: auto;
    clear: both;
}

/* Links within the header */
#links {
    background-color: #fff;
    float: right;
    text-align: right;
    padding: 25px 0 0 0;
    word-spacing: 15px;
    color: #000;
}

#links a:link, a:visited, a:hover, a:active {
    background-color: #4aaaa5;
    color: white;
    padding: 14px 25px;
    text-align: center; 
    display: inline-block;
}

#links a:hover {
    text-decoration: none;
}

#links p {
    color: #777777;
    vertical-align: middle;  
}

/* Primary content on the page */
#main {
    background-image: url(../images/concrete-texture.png);
    background-color: #ccc;
    padding: 35px;
    border-top: 2px solid #c0bdbd;
    overflow: auto;
    clear: both;
    min-height: 100%;
}

/* Header on each page */
#name {
    background-color:#4aaaa5;
    color: #fff;
    float: left;
    padding: 30px;
}

/* Primary section where the real content goes */
#primary {
    width: 960px;
    background-color: #fff;
    margin: auto;
    border: 1px solid #dddddd;
    box-sizing: border-box; 
}

#primary-content {
    padding: 30px;
    overflow: auto;
    clear: both;
    line-height: 34px;
}

#primary-content h1 {
    color: #4aaaa5;
    padding: 0 0 20px 0;
}

#primary hr {
    display: block;
    height: 3px;
    border: 0;
    margin: 1em 0;
    padding: 0; 
    background-color: #dddddd;
}

/* Specific for the initial image */
#myphoto {

}

#myphoto img {
    width: 200px;
    height: 150px;
    float: left;
    padding: 0 25px 0 0;
    margin: 10px 0 0 0;
}

/* Specific for description - need to wrap that text */
#description {
    float: left;
    font-size: 16px;
}

#description p {
    margin-bottom: 30px;
}

#description ul {
    list-style-type: square;
    padding: 0 0 0 25px;
}

/* Form Fields */
.port-input {
    width: 100%;
    padding: 10px 10px 10px 10px;
    margin: 5px 0;
    border: 1px solid #dddddd;
    border-radius: 4px;
    box-sizing: border-box;
}

.port-textarea {
    width: 100%;
    padding: 10px 10px 10px 10px;
    margin: 5px 0;
    border: 1px solid #dddddd;
    border-radius: 4px;
    box-sizing: border-box; 
}

.port-submit input[type=button], input[type=submit], input[type=reset] {
    background-color: #4aaaa5;
    border: none;
    color: white;
    padding: 12px 36px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
}

/* Primary portfolio container */
.portfolio {
    position: relative;
    text-align: center;
    color: white;
    height: 100%;
    width: 100%;
    overflow: auto;
    clear: both;
    margin: -15px;
}

/* Individual portfolio item */
.portfolio-item {
    width: 300px;
    height: 225px;
    position: relative;
    float: left;
    margin: 15px;
}

/* Individual portfolio text */
.portfolio-item p {
    color: #fff;
    position: absolute;
    bottom: 10px;
    line-height: 50px;
    left: 0;
    width: 100%;
    background-color: #4aaaa5;
}

/* Footer */
#footer {
    background-color: #666666;
    color: #ccc;
    padding: 35px 0 5px 0;
    text-align: center;
    vertical-align: bottom;
    border-top: 6px solid #4aaaa5;
    font-size: 12px;
    position: fixed;
    bottom: 0;
    right: 0;
    width: 100%;
}

